Fix header size on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,7 +189,7 @@ body {
 
 .title pre {
   margin: 0;
-  font-size: 5px;
+  font-size: 4px;
 }
 
 .form-advanced {
